# Testing

./: .average.dot  .foo1.dot  .foo2.dot  .foo3.dot  .foo4.dot  .main.dot  CMakeLists.txt  SPEC_RUN.sh  gmon.out  main.cpp  output.txt  run.sh  test.c  test.ll  test.ll.callgraph.dot
SPEC/: bzip2.ll  lbm.ll  libquantum.ll  libquantum.ll.callgraph.dot  mcf.ll  sjeng.ll  sjeng.ll.callgraph.dot
